Atualiza layout das páginas contato e especialidades

--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
 
     <section id="contato">
         <h2>Contato</h2>
-        <p>Email: joao@email.com</p>
+        <p>Email: jv.vansan@gmail.com</p>
         <a href="https://www.linkedin.com/in/seulink" target="_blank" class="btn-linkedin">
             💼 Acessar meu LinkedIn
         </a>
