--- a/especialidades.html
+++ b/especialidades.html
@@ -29,9 +29,10 @@
                 1991.
                 Ele é conhecido por sua estabilidade, segurança e flexibilidade, sendo amplamente utilizado em
                 servidores, desktops, dispositivos embarcados e até supercomputadores</li>
-            <li>Sistemas Operacionais: conceitos, arquitetura</li>
-            <li>HTML, CSS, JavaScript</li>
-            <!-- Adicione mais -->
+            <li>HTML: Linguagem de marcação utilizada para estruturar o conteúdo na web.</li>
+            <li>CSS: Linguagem de estilo utilizada para descrever a apresentação de documentos HTML.</li>
+            <li>JavaScript: Linguagem de programação utilizada para criar interatividade em páginas web.</li>
+
         </ul>
     </section>
 
