--- a/index.html
+++ b/index.html
@@ -4,34 +4,288 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>João | Início</title>
+    <title>João | Desenvolvedor Full-Stack</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 
 <body>
     <header>
         <nav class="navbar">
-            <h1 class="logo">João.dev</h1>
+            <h1 class="logo"><span>João</span>.dev</h1>
             <ul class="nav-links">
-                <li><a href="index.html">Início</a></li>
-                <li><a href="especialidades.html">Especialidades</a></li>
+                <li><a href="#hero">Início</a></li>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#skills">Habilidades</a></li>
                 <li><a href="curriculo.html">Currículo</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
-
+            <div class="mobile-menu-btn">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </nav>
     </header>
 
-    <section id="inicio">
-        <div class="intro">
-            <h2><span id="typed"></span></h2>
-            <p>Programador apaixonado por Linux e sistemas operacionais</p>
+    <!-- Seção Hero -->
+    <section id="hero">
+        <div class="hero-content fade-in-left">
+            <h1 class="hero-title">Olá, eu sou <span data-text="João">João</span><br>Desenvolvedor
+                <span>Full-Stack</span>
+            </h1>
+            <p class="hero-description">Transformando ideias em experiências digitais excepcionais com código limpo e
+                design inovador.</p>
+            <div class="hero-cta">
+                <a href="curriculo.html" class="btn btn-primary">Ver Currículo</a>
+                <a href="#contact" class="btn btn-secondary">Fale Comigo</a>
+            </div>
+        </div>
+        <div class="hero-3d-container">
+            <!-- Three.js renderizará aqui -->
         </div>
     </section>
 
+    <!-- Seção Sobre -->
+    <section id="about">
+        <h2 class="section-title fade-in">Sobre Mim</h2>
+        <p class="section-subtitle fade-in">Conheça um pouco da minha jornada e experiência no mundo do desenvolvimento.
+        </p>
+
+        <div class="about-grid">
+            <div class="about-image fade-in-left">
+                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                    alt="João - Desenvolvedor Full-Stack">
+            </div>
+
+            <div class="about-content fade-in-right">
+                <p class="about-text">Sou um desenvolvedor full-stack apaixonado por criar soluções digitais que
+                    combinam funcionalidade e estética. Com experiência em desenvolvimento web e mobile, busco
+                    constantemente aprender novas tecnologias e aprimorar minhas habilidades.</p>
+
+                <p class="about-text">Especializado em JavaScript e seus frameworks modernos, tenho trabalhado em
+                    projetos que vão desde aplicações web complexas até sistemas de e-commerce e aplicativos móveis.
+                    Minha abordagem é focada em código limpo, performance e experiência do usuário.</p>
+
+                <div class="stats-container">
+                    <div class="stat-item">
+                        <div class="stat-number" data-target="5">0</div>
+                        <div class="stat-label">Anos de Experiência</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number" data-target="42">0</div>
+                        <div class="stat-label">Projetos Concluídos</div>
+                    </div>
+                    <div class="stat-item">
+                        <div class="stat-number" data-target="38">0</div>
+                        <div class="stat-label">Clientes Satisfeitos</div>
+                    </div>
+                </div>
+
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <div class="timeline-date">2023 - Presente</div>
+                        <div class="timeline-title">Desenvolvedor Full-Stack Senior</div>
+                        <div class="timeline-description">TechInnovate Solutions</div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-date">2020 - 2023</div>
+                        <div class="timeline-title">Desenvolvedor Front-end</div>
+                        <div class="timeline-description">WebCreative Agency</div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-date">2018 - 2020</div>
+                        <div class="timeline-title">Desenvolvedor Junior</div>
+                        <div class="timeline-description">StartUp Digital</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Seção Habilidades -->
+    <section id="skills">
+        <h2 class="section-title fade-in">Minhas Habilidades</h2>
+        <p class="section-subtitle fade-in">Tecnologias e ferramentas que domino para criar soluções digitais completas.
+        </p>
+
+        <div class="skills-container">
+            <div class="skill-card fade-in">
+                <div class="skill-icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <h3 class="skill-name">HTML5</h3>
+                <p>Estruturação semântica e acessível para websites modernos.</p>
+                <div class="skill-level">
+                    <div class="skill-progress" data-percentage="95"></div>
+                </div>
+                <div class="skill-percentage">95%</div>
+            </div>
+
+            <div class="skill-card fade-in">
+                <div class="skill-icon">
+                    <i class="fab fa-css3-alt"></i>
+                </div>
+                <h3 class="skill-name">CSS3</h3>
+                <p>Estilização avançada com Flexbox, Grid e animações.</p>
+                <div class="skill-level">
+                    <div class="skill-progress" data-percentage="90"></div>
+                </div>
+                <div class="skill-percentage">90%</div>
+            </div>
+
+            <div class="skill-card fade-in">
+                <div class="skill-icon">
+                    <i class="fab fa-js"></i>
+                </div>
+                <h3 class="skill-name">JavaScript</h3>
+                <p>Desenvolvimento front-end e back-end com ES6+.</p>
+                <div class="skill-level">
+                    <div class="skill-progress" data-percentage="85"></div>
+                </div>
+                <div class="skill-percentage">85%</div>
+            </div>
+
+            <div class="skill-card fade-in">
+                <div class="skill-icon">
+                    <i class="fab fa-react"></i>
+                </div>
+                <h3 class="skill-name">Next.js</h3>
+                <p>Framework React para aplicações web modernas.</p>
+                <div class="skill-level">
+                    <div class="skill-progress" data-percentage="40"></div>
+                </div>
+                <div class="skill-percentage">40%</div>
+            </div>
+
+        </div>
+    </section>
+
+
+
+    <!-- Seção Contato -->
+    <section id="contact">
+        <h2 class="section-title fade-in">Entre em Contato</h2>
+        <p class="section-subtitle fade-in">Vamos conversar sobre seu projeto e como posso ajudar a torná-lo realidade.
+        </p>
+
+        <div class="contact-grid">
+            <div class="contact-info fade-in-left">
+                <div class="contact-card">
+                    <div class="contact-icon">
+                        <i class="fas fa-envelope"></i>
+                    </div>
+                    <div class="contact-details">
+                        <h3>Email</h3>
+                        <p>jv.vansan@gmail.com</p>
+                    </div>
+                </div>
+
+                <div class="contact-card">
+                    <div class="contact-icon">
+                        <i class="fas fa-phone"></i>
+                    </div>
+                    <div class="contact-details">
+                        <h3>Telefone</h3>
+                        <p>+55 (44) 99964-0402</p>
+                    </div>
+                </div>
+
+                <div class="contact-card">
+                    <div class="contact-icon">
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div class="contact-details">
+                        <h3>Localização</h3>
+                        <p>Maringá/Pr, Brasil</p>
+                    </div>
+                </div>
+
+                <div class="social-links">
+                    <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+
+            <form class="contact-form fade-in-right">
+                <div class="form-group">
+                    <label for="name">Nome</label>
+                    <input type="text" id="name" name="name" placeholder="Seu nome" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Seu email" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="subject">Assunto</label>
+                    <input type="text" id="subject" name="subject" placeholder="Assunto da mensagem" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Mensagem</label>
+                    <textarea id="message" name="message" placeholder="Sua mensagem" required></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 João. Todos os direitos reservados.</p>
+        <div class="footer-content">
+            <div class="footer-logo">
+                <h2 class="logo"><span>João</span>.dev</h2>
+                <p>Transformando ideias em experiências digitais excepcionais.</p>
+            </div>
+
+            <div class="footer-links">
+                <div class="footer-column">
+                    <h3>Navegação</h3>
+                    <ul>
+                        <li><a href="#hero">Início</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#skills">Habilidades</a></li>
+                        <li><a href="curriculo.html">Currículo</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-column">
+                    <h3>Serviços</h3>
+                    <ul>
+                        <li><a href="#">Desenvolvimento Web</a></li>
+                        <li><a href="#">Desenvolvimento Mobile</a></li>
+                        <li><a href="#">UI/UX Design</a></li>
+                        <li><a href="#">Consultoria</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-column">
+                    <h3>Legal</h3>
+                    <ul>
+                        <li><a href="#">Termos de Uso</a></li>
+                        <li><a href="#">Política de Privacidade</a></li>
+                        <li><a href="#">Cookies</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2025 João.dev. Todos os direitos reservados.</p>
+            <div class="footer-social">
+                <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
     </footer>
 
     <script src="script.js"></script>
