chore: add profile image to assets directory

--- a/index.html
+++ b/index.html
@@ -53,51 +53,21 @@
         <p class="section-subtitle fade-in">Conheça um pouco da minha jornada e experiência no mundo do desenvolvimento.
         </p>
 
-        <div class="about-grid">
-            <div class="about-image fade-in-left">
-                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-                    alt="João - Desenvolvedor Full-Stack">
-            </div>
+        <div class="about-grid no-image">
 
             <div class="about-content fade-in-right">
-                <p class="about-text">Sou um desenvolvedor full-stack apaixonado por criar soluções digitais que
-                    combinam funcionalidade e estética. Com experiência em desenvolvimento web e mobile, busco
-                    constantemente aprender novas tecnologias e aprimorar minhas habilidades.</p>
-
-                <p class="about-text">Especializado em JavaScript e seus frameworks modernos, tenho trabalhado em
-                    projetos que vão desde aplicações web complexas até sistemas de e-commerce e aplicativos móveis.
-                    Minha abordagem é focada em código limpo, performance e experiência do usuário.</p>
-
-                <div class="stats-container">
-                    <div class="stat-item">
-                        <div class="stat-number" data-target="5">0</div>
-                        <div class="stat-label">Anos de Experiência</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number" data-target="42">0</div>
-                        <div class="stat-label">Projetos Concluídos</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number" data-target="38">0</div>
-                        <div class="stat-label">Clientes Satisfeitos</div>
-                    </div>
-                </div>
+                <p class="about-text">Sou estudante de Engenharia de Software na Unicesumar, com uma sólida base em
+                    tecnologia e o objetivo de ingressar no mercado de tecnologia para adquirir mais experiência e
+                    evoluir na área. Concluí o curso de Geração Web, onde aprendi a criar sites utilizando HTML e CSS,
+                    além de desenvolver habilidades em ferramentas como Photoshop e GIMP. Também possuo domínio no
+                    pacote Office (Word, Excel e PowerPoint) e estou em constante aprendizado, atualmente focado na
+                    linguagem C.</p>
 
                 <div class="timeline">
                     <div class="timeline-item">
-                        <div class="timeline-date">2023 - Presente</div>
-                        <div class="timeline-title">Desenvolvedor Full-Stack Senior</div>
-                        <div class="timeline-description">TechInnovate Solutions</div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-date">2020 - 2023</div>
-                        <div class="timeline-title">Desenvolvedor Front-end</div>
-                        <div class="timeline-description">WebCreative Agency</div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-date">2018 - 2020</div>
-                        <div class="timeline-title">Desenvolvedor Junior</div>
-                        <div class="timeline-description">StartUp Digital</div>
+                        <div class="timeline-date">2024 - 2028</div>
+                        <div class="timeline-title">Acadêmico em Engenharia de Software</div>
+                        <div class="timeline-description">Unicesumar</div>
                     </div>
                 </div>
             </div>
