*SITE EM MANUTENÇÃO*

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
+    <title>Redirecionando...</title>
+    <script>
+        // Redireciona automaticamente
+        window.location.href = "manutencao.html";
+    </script>
 </head>
 
 <body>
