--- a/curriculo.html
+++ b/curriculo.html
@@ -42,7 +42,7 @@
                 <h3>Baixe meu currículo completo</h3>
                 <p>Para mais detalhes sobre minha experiência e qualificações, faça o download do meu currículo em PDF.
                 </p>
-                <a href="assets/resume/Currículo Joao.pdf" class="btn btn-primary" download><i
+                <a href="assets/resume/Currículo Joao.pdf" class="btn btn-cyber" download><i
                         class="fas fa-download"></i> Download Currículo</a>
             </div>
 
@@ -55,7 +55,7 @@
                             <div class="timeline-dot"></div>
                             <div class="timeline-date">Fev. de 2025 - Até o momento</div>
                             <div class="timeline-content">
-                                <h4>Técnico de Suporte Trainee I</h4>
+                                <h4>Técnico de Suporte Junior I</h4>
                                 <h5>SG SISTEMAS</h5>
                                 <p>Suporte técnico e treinamento para usuários do sistema, solução de problemas
                                     técnicos, atendimento ao cliente, suporte em ambiente Linux.</p>
@@ -110,17 +110,6 @@
                                     sistemas.</p>
                             </div>
                         </div>
-
-                        <div class="timeline-item">
-                            <div class="timeline-dot"></div>
-                            <div class="timeline-date">2024</div>
-                            <div class="timeline-content">
-                                <h4>Excel - 50 horas</h4>
-                                <h5>CEPED</h5>
-                                <p>Curso de Excel com foco em análise de dados e automação de tarefas.</p>
-                            </div>
-                        </div>
-
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-date">2017</div>
