--- a/especialidades.html
+++ b/especialidades.html
@@ -78,6 +78,14 @@
                 <h3 class="skill-name">C</h3>
                 <p>Programação de sistemas e aplicações.</p>
             </div>
+
+            <div class="skill-card fade-in">
+                <div class="skill-icon">
+                    <i class="fas fa-terminal"></i>
+                </div>
+                <h3 class="skill-name">Harbour</h3>
+                <p>Dialeto xBase (Clipper) para aplicações robustas.</p>
+            </div>
         </div>
     </section>
 
